--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mokujin (v1.0.1) is a discord bot that fetches Tekken 7 framedata.   It uses [discord.py](https://github.com/Rapptz/discord.py) v1.2.5+ and is updated to use Python 3.6+",
   "main": "index.js",
   "scripts": {
-    "start" : "node mokujin.py"
+    "start": "node mokujin.py"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/DistortedGhost/Mokujin#readme",
   "dependencies": {
+    "cjs": "0.0.11",
     "discord.js": "^11.5.1",
     "python": "0.0.4"
   }
